# SZp-CUDA

./: .gitignore  CMakeLists.txt
cmake/: SZPConfig.cmake.in
examples/: CMakeLists.txt  prev.cmake
include/: szp_demo.hh  szp_driver.hh  szp_module.hh
src/: cuSZp_f32.cu  cuSZp_f64.cu  szp_cli.cc  szp_demo.cc  szp_driver.cc  szp_module.cu  szp_version.h.in
